tomasulo no branch predicted

--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -11,8 +11,10 @@ add_executable(
     Simulator 
     src/MainCPU.cpp 
     src/MemoryManager.cpp 
+    src/BranchPredictor.cpp
+    src/Tomasulo.cpp
     src/Simulator.cpp 
-    src/BranchPredictor.cpp 
+    src/RISCV.cpp
     src/Cache.cpp
 )
 
